--- a/app/templates/home/index.html
+++ b/app/templates/home/index.html
@@ -21,7 +21,7 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Banks</a>
+                            <a class="nav-link" href="{{ url_for('bank.index' ) }}">Banks</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Bank Products</a>
