layout file has been set up in templates directory

--- a/app/templates/banks/index.html
+++ b/app/templates/banks/index.html
@@ -1,1 +1,9 @@
-BANKS-INDEX
+{% extends "layout.html" %}
+
+{% block title %}Home · Be Aware{% endblock %}
+
+{% block content %}
+  <h1>hello bank index</h1>
+  <h1>hello bank index</h1>
+  <h1>hello bank index</h1>
+{% endblock %}
