--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,41 +1,42 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %} Be Aware {% endblock %}</title>
+    <link rel="stylesheet" href="../static/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-primary fixed-top mx-2 mx-auto">
         <div class="container-fluid">
-            <a class="navbar-brand text-white" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="{{ url_for('bank.index' ) }}">Banks</a>
+                        <a class="nav-link" href="{{ url_for('bank.index' ) }}">Banks</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Bank Products</a>
+                        <a class="nav-link" href="#">Bank Products</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Incomes</a>
+                        <a class="nav-link" href="#">Incomes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="#">Expenses</a>
+                        <a class="nav-link" href="#">Expenses</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <main class="container mt-5">
+    <main class="container mt-5 p-4">
     {% block content %}
         
     {% endblock %}
