create view has been set up

--- a/app/templates/banks/index.html
+++ b/app/templates/banks/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
     <div class="container w-75">
-        <a href="#" class="btn btn-outline-primary">New Bank</a>
+        <a href="{{ url_for('bank.create' ) }}" class="btn btn-outline-primary">New Bank</a>
         <table class="table table-striped">
             <thead>
                 <tr>
