--- a/app/templates/banks/create.html
+++ b/app/templates/banks/create.html
@@ -4,4 +4,10 @@
 
 {% block content %}
     <h2>Banks Create</h2>
+    <form action="#" method="post">
+        <div class="my-3">
+            <label for="name" class="form-label">Bank Name</label>
+            <input type="text" name="name" id="name" class="form-control">
+        </div>
+    </form>
 {% endblock %}
