--- a/app/templates/banks/index.html
+++ b/app/templates/banks/index.html
@@ -4,7 +4,33 @@
 
 {% block content %}
     <div class="container w-75">
-        <a href="{{ url_for('bank.create' ) }}" class="btn btn-outline-primary">New Bank</a>
+
+        <section class="modal fade" tabindex="-1" id="create-bank">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">New Bank</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form action="#">
+                            <div class="col-sm">
+                                <div class="form-floating mt-2 w-">
+                                    <input type="email" name="email" id="email1" class="form-control" placeholder="Bank name">
+                                    <label for="email1">Bank name</label>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-bank">New Bank</button>
         <table class="table table-striped">
             <thead>
                 <tr>
@@ -32,5 +58,4 @@
             </tbody>
         </table>
     </div>
-
 {% endblock %}
