--- a/app/templates/banks/index.html
+++ b/app/templates/banks/index.html
@@ -16,7 +16,7 @@
                         <div class="modal-body">
                             <div class="col-sm">
                                 <div class="form-floating mt-2 w-">
-                                    <input type="text" name="name" id="name" class="form-control" placeholder="Bank name">
+                                    <input type="text" name="name" id="name" class="form-control" placeholder="Bank name" required>
                                     <label for="name">Bank name</label>
                                 </div>
                             </div>
@@ -24,6 +24,33 @@
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
                             <button type="submit" class="btn btn-primary">Save</button>
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </section>
+
+        <section class="modal fade" tabindex="-1" id="edit-bank">
+            <form action="{{ url_for('bank.update') }}" method="post">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title">Edit</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <p id="bank-id" class="fs-6 fw-bold"></p>
+                            <input type="hidden" name="id" id="bank-id-input">
+                            <div class="col-sm">
+                                <div class="form-floating mt-2 w-">
+                                    <input type="text" name="name" id="bank-name" class="form-control" placeholder="Bank name" required>
+                                    <label for="bank-name">Bank name</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary">Save changes</button>
                         </div>
                     </div>
                 </div>
@@ -42,20 +69,53 @@
             </thead>
             
             <tbody>
+                {% for bank in banks %}                    
                 <tr>
-                    <th scope="row">3</th>
-                    <td>John</td>
-                    <td>Doe</td>
+                    <th scope="row">{{ bank.id }}</th>
+                    <td>{{ bank.name }}</td>
+                    <td>{{ bank.created_at }}</td>
                     <td>
                         <div class="d-flex gap-2">
-                            <a href="#" class="btn btn-success">Edit</a>
+                            <button 
+                                type="button" 
+                                class="btn btn-success" 
+                                data-bs-toggle="modal" 
+                                data-bs-target="#edit-bank"
+                                data-id="{{ bank.id }}"
+                                data-name="{{ bank.name }}"
+                            >
+                            Edit
+                            </button>
                             <form action="{{ url_for('bank.create' ) }}" method="post">
                                 <button type="submit" class="btn btn-danger">Delete</button>
                             </form>
                         </div>
                     </td>
                 </tr>
+                {% endfor %}
             </tbody>
         </table>
     </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+
+            const editBankModal = document.getElementById('edit-bank');
+
+            editBankModal.addEventListener('show.bs.modal', function (event) {
+                
+                // Button that triggered the modal
+                const button = event.relatedTarget;
+
+                // Extract info from data-* attributes
+                const bankId = button.getAttribute('data-id');
+                const bankName = button.getAttribute('data-name');
+
+                // Update the modal's fields
+                document.getElementById('bank-id').textContent = 'Id '+bankId;
+                document.getElementById('bank-name').value = bankName;
+                document.getElementById('bank-id-input').value = bankId
+            });
+        });
+    </script>
 {% endblock %}
