--- a/app/templates/banks/index.html
+++ b/app/templates/banks/index.html
@@ -86,7 +86,7 @@
                             >
                             Edit
                             </button>
-                            <form action="{{ url_for('bank.create' ) }}" method="post">
+                            <form action="{{ url_for('bank.delete', id=bank.id ) }}" method="post">
                                 <button type="submit" class="btn btn-danger">Delete</button>
                             </form>
                         </div>
