system now shows bank accounts view

--- a/app/templates/banks/index.html
+++ b/app/templates/banks/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}Banks · Be Aware{% endblock %}
+{% block title %}Banks{% endblock %}
 
 {% block content %}
     <div class="container w-75">
