--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -22,7 +22,7 @@
                         <a class="nav-link" href="{{ url_for('bank.index' ) }}">Banks</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Bank Products</a>
+                        <a class="nav-link" href="{{ url_for('bank_account.index' ) }}">Bank Accounts</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Incomes</a>
