--- a/app/templates/bank_accounts/index.html
+++ b/app/templates/bank_accounts/index.html
@@ -4,4 +4,56 @@
 
 {% block content %}
     <h2>Bank Accounts</h2>
+    <section class="modal fade" tabindex="-1" id="create-bank-account">
+        <form action="{{ url_for('bank_account.create' ) }}" method="POST">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">New Bank Account</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="col-sm">
+                                <div class="form-floating mt-2">
+                                    <input type="text" name="nick-name" id="nick-name-id" class="form-control" placeholder="Nick Name" required>
+                                    <label for="nick-name-id">Nick Name</label>
+                                </div>
+                            </div>
+                            <div class="col-sm">
+                                <div class="form-floating mt-2">
+                                    <input type="text" name="account-number" id="account-number-id" class="form-control" placeholder="Account Number" required>
+                                    <label for="account-number-id">Account Number</label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm">
+                                <div class="form-floating mt-2">
+                                    <input type="text" name="amount-available" id="amount-available-id" class="form-control" placeholder="Amount Available" required>
+                                    <label for="amount-available-id">Amount Available</label>
+                                </div>
+                            </div>
+                            <div class="col-sm">
+                                <div class="form-floating mt-2">
+                                    <select name="select-banks" id="select-banks-id" class="form-select">
+                                        {% for bank in banks %}
+                                        <option value="{{ bank.id }}">{{ bank.name }}</option>
+                                        {% endfor %}
+                                    </select>
+                                    <label for="select-banks-id" class="ml-2">Choose a bank</label>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary">Save</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </section>
+
+    <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-bank-account">New Account</button>
 {% endblock %}
