--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -25,6 +25,9 @@
                         <a class="nav-link" href="{{ url_for('bank_account.index' ) }}">Bank Accounts</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('credit_card.index' ) }}">Credit Cards</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#">Incomes</a>
                     </li>
                     <li class="nav-item">
