--- a/app/templates/credit_cards/index.html
+++ b/app/templates/credit_cards/index.html
@@ -24,7 +24,7 @@
                             <div class="col-sm">
                                 <div class="form-floating mt-2">
                                     <input type="text" name="limit" id="limit-id" class="form-control"
-                                        placeholder="Account Number" required>
+                                        placeholder="Limit" required>
                                     <label for="limit-id">Limit</label>
                                 </div>
                             </div>
