--- a/app/templates/credit_cards/index.html
+++ b/app/templates/credit_cards/index.html
@@ -74,15 +74,15 @@
         </thead>
 
         <tbody>
-            {% for bank_account in bank_accounts %}
+            {% for credit_card in credit_cards %}
             <tr>
-                <th scope="row">{{ bank_account.id }}</th>
-                <td>{{ bank_account.account_number }}</td>
-                <td>{{ bank_account.nick_name }}</td>
-                <td>{{ bank_account.bank.name }}</td>
-                <td>{{ bank_account.amount_available }}</td>
-                <td>{{ bank_account.is_active }}</td>
-                <td>{{ bank_account.created_at }}</td>
+                <th scope="row">{{ credit_card.id }}</th>
+                <td>{{ credit_card.nick_name }}</td>
+                <td>{{ credit_card.bank.name }}</td>
+                <td>{{ credit_card.limit }}</td>
+                <td>{{ credit_card.amount_available }}</td>
+                <td>{{ credit_card.is_active }}</td>
+                <td>{{ credit_card.created_at }}</td>
                 <td>
                     <div class="d-flex gap-2">
                         <button 
@@ -90,14 +90,14 @@
                             class="btn btn-success" 
                             data-bs-toggle="modal"
                             data-bs-target="#edit-bank-account" 
-                            data-credit-card-id="{{ bank_account.id }}"
-                            data-limit="{{ bank_account.account_number }}"
-                            data-nick-name="{{ bank_account.nick_name }}"
-                            data-amount-available="{{ bank_account.amount_available }}"
-                            data-bank-id="{{ bank_account.bank.id }}"
+                            data-credit-card-id="{{ credit_card.id }}"
+                            data-limit="{{ credit_card.limit }}"
+                            data-nick-name="{{ credit_card.nick_name }}"
+                            data-amount-available="{{ credit_card.amount_available }}"
+                            data-bank-id="{{ credit_card.bank.id }}"
                         >Edit
                         </button>
-                        <form action="{{ url_for('bank_account.delete', id=bank_account.id) }}" method="POST">
+                        <form action="" method="">
                             <button type="submit" class="btn btn-danger">Delete</button>
                         </form>
                     </div>
