--- a/app/templates/banks/index.html
+++ b/app/templates/banks/index.html
@@ -3,6 +3,7 @@
 {% block title %}Banks{% endblock %}
 
 {% block content %}
+    <h2>Banks</h2>
     <div class="container w-75">
 
         <section class="modal fade" tabindex="-1" id="create-bank">
