--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -33,6 +33,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Expenses</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('expense_category.index' ) }}">Expense Category</a>
+                    </li>
                 </ul>
             </div>
         </div>
