system now allows you to delete expense category records

--- a/app/templates/expense_categories/index.html
+++ b/app/templates/expense_categories/index.html
@@ -36,7 +36,7 @@
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h5 class="modal-title"></h5>
+                            <h5 class="modal-title">Edit</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
@@ -56,7 +56,7 @@
             </form>
         </section>
 
-        <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-expense-category">New Bank</button>
+        <button type="button" class="btn btn-outline-primary" data-bs-toggle="modal" data-bs-target="#create-expense-category">New Expense Category</button>
         <table class="table table-striped">
             <thead>
                 <tr>
@@ -85,7 +85,7 @@
                             >
                             Edit
                             </button>
-                            <form action="#" method="post">
+                            <form action="{{ url_for('expense_category.delete', id=expense_category.id) }}" method="post">
                                 <button type="submit" class="btn btn-danger">Delete</button>
                             </form>
                         </div>
@@ -108,6 +108,7 @@
 
                 document.getElementById('expense-category-id-input').value = exepenseCategoryId;
                 document.getElementById('expense-category-name').value = expenseCategoryName;
+                document.getElementById('modal-title').textContent = 'Edit '+expenseCategoryName;
             });
         })
     </script>
