--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -31,7 +31,7 @@
                         <a class="nav-link" href="#">Incomes</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Expenses</a>
+                        <a class="nav-link" href="{{ url_for('expense.index' ) }}">Expenses</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('expense_category.index' ) }}">Expense Category</a>
